fixed the header spacing

--- a/views/refbook.scss
+++ b/views/refbook.scss
@@ -46,7 +46,7 @@ html, body {
         margin: 0 auto;
         h1, h2 {
             text-align: center; 
-            padding-top: 50px;
+            padding-top: 60px;
         }
         .right {
             float: right;
